# deel-takehome-app

./: README.md  app.py  pyproject.toml
