[tool.poetry]
name = "deel-challenge"
version = "0.1.0"
description = ""
authors = ["Hasib Ahmed <hasib@hasib-ahmed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
pandas = "^2.2.2"
transformers = "^4.41.2"
rapidfuzz = "^3.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
